Facil checkout onepage Otp

--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -109,3 +109,12 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
     });
 //]]>
 </script>
+<script type="text/javascript">
+$(document).ready(function(){
+	$(".btn-checkout").click(function(){
+		alert("The paragraph was clicked.");
+		return false
+	});
+});
+
+</script>
