Facil checkout onepage Otp

--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -110,8 +110,8 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 //]]>
 </script>
 <script type="text/javascript">
-$(document).ready(function(){
-	$(".btn-checkout").click(function(){
+jQuery(document).ready(function(){
+	jQuery(".btn-checkout").click(function(){
 		alert("The paragraph was clicked.");
 		return false
 	});
