Facil checkout onepage Otp

--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -112,7 +112,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 <script type="text/javascript">
 jQuery(document).ready(function(){
 	jQuery(".btn-checkout").click(function(){
-		alert("The paragraph was clicked.");
+		alert("The Test");
 		return false
 	});
 });
