--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -1,3 +1,4 @@
+/* Ravikant*/
 /* ============================================ *
  * Codazon_Theme_Var
  * ============================================ */
