--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26733,6 +26733,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 }
 
 @media only screen and (max-width: 1200px) and (min-width: 768px) {
+  .cdz-header-menu-content .cdz-fix-left .cdz-content-megamenu {width: 100%;}
   .cdz-header-bottom .cdz-header-bottom-content {position: relative;}
    .cdz-header-bottom .cdz-header-bottom-content .search-wrapper {    display: block;
     position: absolute; top: 33px; left: 50%; width: 250px;  margin-left: -125px; padding: 0;}
@@ -26792,9 +26793,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 }
 
 @media only screen and (max-width: 480px) {
-  .nested-container .page-banners .right {
-    float: none!important;  width: 100%!important;  margin: 0 auto!important;}
-  .nested-container .page-banners .left { float: none!important;  width: 100%!important;  margin: 0 auto!important;}
+
   .footer-bottom .col-sm-6 p.h5 {margin-bottom: 15px;}
   .footer-bottom .col-sm-6 { padding: 0 15px!important;}
   .footer .footer-bottom .col-sm-5 {  margin-bottom: 15px!important;}
@@ -26859,18 +26858,36 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 @media only screen and (max-width: 1024px) {
 .nested-container .page-banners .left {
     float: left;
-    width: 100%;
+    width: 53.5%;
     margin-right: 0px;
     margin-bottom: 10px;
 }
 .nested-container .page-banners .right {
     float: right;
-    width: 100%;
+    width: 45.5%;
     margin-left: 0;
     margin-bottom: 10px;
 }
 
 } 
+
+
+@media only screen and (max-width: 767px) {
+.nested-container .page-banners .left {
+    float: left;
+    width: 53.5%;
+    margin-right: 0px;
+    margin-bottom: 10px;
+}
+.nested-container .page-banners .right {
+    float: right;
+    width: 45%;
+    margin-left: 0;
+    margin-bottom: 8px;
+}
+
+} 
+
 
 
 
