--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -84,7 +84,12 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 </div>
  
 </form>
-
+<div class="otp-validation" style="display:none">
+	<div class="otp-validation-inner">
+		<input type="text" name="otp" id="otp" />
+		<span class="verify-otp" id="verify-otp">Verify Otp</span>
+	</div>
+</div>
 
 <script type="text/javascript">
 //<![CDATA[
