--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -115,9 +115,9 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 //]]>
 </script>
 <script>
-	$(document).ready(function(){		
-		$('#verify-otp').click(function(){
-			var otp = $('#otp').val() ;
+	jQuery(document).ready(function(){		
+		jQuery('#verify-otp').click(function(){
+			var otp = jQuery('#otp').val() ;
 			alert(otp);
 			var url= "https://www.spreeos.com/onestepcheckout/index/verifyOtp";
 			var request = new Ajax.Request(url, {
