--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -119,11 +119,13 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 	jQuery(document).ready(function(){		
 		jQuery('#verify-otp').click(function(){
 			var otp = jQuery('#otp').val() ;
+			var telephone = jQuery('#billing:telephone').val() ;
 			alert(otp);
+			alert(telephone);
 			var url= "https://www.spreeos.com/onestepcheckout/index/verifyOtp";
 			var request = new Ajax.Request(url, {
 				method: 'post',
-				parameters: {otp: otp},
+				parameters: {otp: otp, telephone: telephone},
 				 onSuccess: function(transport) {
 					var response = transport.responseText;
 					if(response === 'Success'){
