--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -84,7 +84,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 </div>
  
 </form>
-<script src="<?php echo $this->getSkinUrl() ?>"js/jquery.popup.js></script>
+<script src="<?php echo $this->getSkinUrl() ?>js/jquery.popup.js"></script>
 <link rel="stylesheet" type="text/css" href="<?php echo $this->getSkinUrl() ?>css/jquery.popup.css">
 <div class="otp-validation" id="otp-validation" style="display:none">
 	<div class="error" id="error"></div>
