--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onestepcheckout.phtml
@@ -143,7 +143,7 @@ $mod_version	= Mage::helper('onestepcheckout')->getOPCVersion();
 .otp-validation{
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
+    padding-top: 22%;
     left: 0;
     top: 0;
     width: 100%;
