--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26931,7 +26931,33 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
   .one_step1 .order-products-table tbody tr.first td .product-name {font-size: 14px;}
   .product-view .product-shop ul.add-to-links .compare {display: none;}
 
-
+/* OTP Popup*/
+.otp-validation{
+    position: fixed;
+    z-index: 1;
+    padding-top: 22%;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+.otp-validation-inner {
+    width: 21%;
+    margin: 0 auto;
+}
+.verify-otp {
+    background: #48D5F2;
+    color: #FFF;
+    padding: 9px;
+    float: left;
+    font-weight: 400;
+    border: 2px solid #48D5F2;
+    border-radius: 4px;
+    text-align: center;
+}
 
 
 
