--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26957,6 +26957,7 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     border: 2px solid #48D5F2;
     border-radius: 4px;
     text-align: center;
+	cursor: pointer;
 }
 
 
