--- a/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/onestepcheckout/onepage/review.phtml
@@ -39,7 +39,7 @@
      
 <!-- Heard Us -->
        
-        <button type="submit" title="<?php echo $this->__('Place Order Now') ?>" class="button btn-checkout" onclick="checkout.save(); return false;"><?php echo $this->__('Place Order Now') ?></button>
+        <button type="submit" title="<?php echo $this->__('Place Order Now') ?>" class="button btn-checkout" id="customsubmit" onclick="checkout.save(); return false;"><?php echo $this->__('Place Order Now') ?></button>
             <span id="review-please-wait" style="display:none;float:right;">
                 <img src="<?php echo $this->getSkinUrl('images/onestepcheckout/opc-ajax-loader_onestepcheckout.gif') ?>" alt="<?php echo $this->__('Submitting order information...') ?>" title="<?php echo $this->__('Submitting order information...') ?>" class="v-middle" /> <?php echo $this->__('Submitting order information...') ?>
             </span>
