change file in view

--- a/app/design/frontend/codazon_fastest/default/template/codazon_quickshop/product/view.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/codazon_quickshop/product/view.phtml
@@ -80,6 +80,7 @@ $_product = $this->getProduct();
             <div class="product-shop-wrap product-shop-social">
                     <div class="row">
                         <div class="col-sm-17">
+						<p class="social-heading">Share The Love</p>  
                             <ul class="cdz-social-listing">
                                 <li class="cdz-facebook">
                                     <a onclick='window.open("https://www.facebook.com/sharer/sharer.php?u=<?php echo $url ?>&pubid=ra-5469982e19f36f4c&ct=1&pco=tbxnj-1.0","","menubar=1,resizable=1,width=700,height=600")' href="javascript:void(0)" title="" class="trasition-all" data-placement="top" data-toggle="tooltip" data-original-title="Share on Facebook"><i class="fa fa-facebook"></i>
