--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26886,7 +26886,54 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
     margin-bottom: 8px;
 }
 
-} 
+}
+
+@media only screen and (max-width: 480px) { 
+.nested-container .page-banners .left {    width: 100%!important;  margin-bottom: 0!important; margin-left: 0; margin-right: 0;}
+.nested-container .page-banners .right {    width: 100%!important;  margin-right: 0!important;  margin-bottom: 0!important;}
+
+
+}
+
+/*===================================*/
+.one_step1 .buttons-set button.button {padding: 4px 8px;
+    float: right!important;
+    margin-top: 10px;
+    background: transparent;
+    border-color: #282828;
+    color: #282828;
+    font: 600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif;
+    outline: none;
+    border: 3px solid;
+    height: 42px!important;
+    line-height: 32px;
+    opacity: 1;
+    margin: 0;
+    box-shadow: none;
+    text-shadow: none;}
+    .one_step1 .buttons-set button.button:hover {    background: #282828; border-color: #282828; color: white; border: 3px solid #282828;}
+
+.order-products-table tfoot tr td > td {    padding-bottom: 0!important;  vertical-align: bottom; padding-right: 20px;}
+.discount-form .buttons-set button.button {    padding: 4px 8px;
+    background: transparent;
+    border-color: #282828;
+    color: #282828;
+    font: 600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif;
+    outline: none;
+    border: 3px solid;
+    height: 42px!important;
+    line-height: 32px; 
+    opacity: 1;
+    margin: 10px 0!important;
+    box-shadow: none;
+    text-shadow: none;}
+  .discount-form .buttons-set button.button:hover {background: #282828; border-color: #282828; color: white; border: 3px solid #282828;}
+  .one_step1 .order-products-table tbody tr.first td .product-name {font-size: 14px;}
+  .product-view .product-shop ul.add-to-links .compare {display: none;}
+
+
+
+
 
 
 
