add css for responsive

--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -25792,18 +25792,11 @@ form .legend {
   }
 }
 @media (max-width: 767px) {
-  .cdz-block-categories-deals {
-    display: none;
-  }
-  .cdz-block-categories-deals h3 {
-    font: 500 11px/1.55 Poppins, Helvetica Neue, Verdana, Arial, sans-serif;
-  }
-  .cdz-block-categories-deals h3 a {
-    font: 500 11px/1.55 Poppins, Helvetica Neue, Verdana, Arial, sans-serif;
-  }
-
-  .menu-breadcrumbs .breadcrumbs {
-    margin: 0;
+  .onestepcheckout_datafields .one_step1 {width: 100%; float: left;}
+  .cdz-block-categories-deals {  display: none;  }
+  .cdz-block-categories-deals h3 { font: 500 11px/1.55 Poppins, Helvetica Neue, Verdana, Arial, sans-serif;  }
+  .cdz-block-categories-deals h3 a { font: 500 11px/1.55 Poppins, Helvetica Neue, Verdana, Arial, sans-serif; }
+ .menu-breadcrumbs .breadcrumbs {  margin: 0;
     padding: 10px 10px 0 10px;
     border-radius: 5px;
     font-size: 10px;
@@ -26100,6 +26093,12 @@ form .legend {
 /* ============================================ *
 * Codazon_Footer 2
 * ============================================ */
+@media only screen and (max-width: 1024px) and (min-width: 768px) {
+  .onestepcheckout_datafields .one_step1 {width: 50%; float: left;}
+
+}
+
+
 @media (min-width: 767px) and (max-width: 991px) {
   .footer-newsletter-02 .ftop-newsletter .block.block-subscribe .block-content .input-box {
     width: 70%;
@@ -26518,10 +26517,9 @@ form .legend {
         clear: both;
     }
     @media screen and (max-width: 480px) {
-        .left, .right {
-            float: none;
-            width: auto;
-        }
+      .buttons-set button.button  {    width: 100%!important;}
+      .input-box {width: 100!important}
+        .left, .right { float: none; width: auto; }  
     }
   
   .kd {
