--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -21,7 +21,9 @@
                 <?php $_category = Mage::getModel('catalog/category')->load($_category->getId()) ?>
                 <?php $_subcategories = $_category->getChildrenCategories() ?>
                 <?php if ((count($_subcategories)>0 )and
-				(count($_subcategories)<=2)){ ?>
+				(count($_subcategories)<=2)){
+					echo 'arv'.count($_subcategories);
+					?>
                 <div class="groupmenu-drop">				 
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
@@ -57,7 +59,8 @@
 				</div><!--row div-->
 				</div> 
 				<?php }else{?>	
-           <?php if (count($_subcategories)>0 ){ ?> 			
+           <?php if (count($_subcategories)>0 ){
+			   ?> 			
 					<div class="groupmenu-drop">				 
                 <div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
@@ -76,7 +79,7 @@
 							<?php  $_subsubcategory = Mage::getModel('catalog/category')->load($_subcategory->getId());
 		 
 							 $_subsubcategories = $_subsubcategory->getChildrenCategories() ;	?>
-							 <?php  if (count($_subcategories) > 0): ?>
+							 <?php  echo "abc".count($_subcategories);if (count($_subcategories) > 0): ?>
 							 <ul class="groupdrop-link">
 							 <?php foreach($_subsubcategories as $_subsubcategory){?>
 							 <li class="item"><a href="<?php echo $_helper->getCategoryUrl($_subsubcategory) ?>">
