--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -57,6 +57,7 @@
 					<?php endforeach; ?>
 				</div><!--row div-->
 				</div> 
+				</div>
 				<?php }else{?>	
            <?php if (count($_subcategories)>0 ){
 			   ?> 			
