--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -60,7 +60,7 @@
 				</div>
 				<?php }
 				elseif((count($_subcategories)>0 )and
-				(count($_subcategories)>2 and count($_subcategories)<=3 )){?>
+				(count($_subcategories)>=2 and count($_subcategories)<=3 )){?>
 					<div class="groupmenu-drop">				 
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
