--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -65,7 +65,7 @@
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="col-sm-12 coloumn2"><!--single level-->
+						<div class="custom_menu_coloumn2"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -101,7 +101,7 @@
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="col-sm-12 coloumn3"><!--single level-->
+						<div class="custom_menu_coloumn3"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -137,7 +137,7 @@
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="col-sm-12 coloumn4"><!--single level-->
+						<div class="custom_menu_coloumn4"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
