--- a/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/page/custommenu.phtml
@@ -27,7 +27,7 @@
                <div class="groupmenu-drop-content groupmenu-1">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="col-sm-24"><!--single level-->
+						<div class="customcoloum"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -65,7 +65,7 @@
                <div class="groupmenu-drop-content groupmenu-2">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="coloumn-2"><!--single level-->
+						<div class="customcoloum"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -101,7 +101,7 @@
                <div class="groupmenu-drop-content groupmenu-3">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="coloumn-3"><!--single level-->
+						<div class="customcoloum"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -137,7 +137,7 @@
                <div class="groupmenu-drop-content groupmenu-4">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="coloumn-4"><!--single level-->
+						<div class="customcoloum"><!--single level-->
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
@@ -177,7 +177,7 @@
                 <div class="groupmenu-drop-content groupmenu-6" style="padding-bottom: 60px;">
 						<div class="row"> <!--row div-->
                         <?php foreach($_subcategories as $_subcategory): ?>
-						<div class="col-sm-4">
+						<div class="customcoloum">
 						<div class="groupdrop-banner space-s">
 						<?php if(Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail()!=''){?>
 						<img  width="200px" height="200px" class="img-responsive" src="<?php echo Mage::getBaseUrl('media') . 'catalog/category/' .Mage::getModel('catalog/category')->load($_subcategory->getId())->getThumbnail();?>"/>
