--- a/app/design/frontend/codazon_fastest/default/template/sales/order/recent.phtml
+++ b/app/design/frontend/codazon_fastest/default/template/sales/order/recent.phtml
@@ -49,7 +49,11 @@
             </tr>
         </thead>
         <tbody>
+		
             <?php foreach ($_orders as $_order): ?>
+			<?php $date_time_stamp=time();
+              $created_at = strtotime($_order->getData('created_at'));
+        ?>
                 <tr>
                     <td><?php echo $_order->getRealOrderId() ?></td>
                     <td><span class="nobr"><?php echo $this->formatDate($_order->getCreatedAtStoreDate()) ?></span></td>
@@ -59,6 +63,12 @@
                     <td class="a-center">
                         <span class="nobr">
                         <a href="<?php echo $this->getViewUrl($_order) ?>"><?php echo $this->__('View Order') ?></a>
+						
+						<?php if (($date_time_stamp-$created_at)<=86400 && $_order->getData('status')!='canceled' ) : ?>
+					<span class="separator">|</span>
+                    <a href="<?php echo $this->getUrl('customerordercancel/order/cancel', array('order_id' => $_order->getId(), '_secure'=>true)) ?>" class="link-reorder"><?php echo $this->__('Cancel Order') ?></a>
+                     <?php endif ?>
+					 
                         <?php /*<?php if ($this->helper('sales/reorder')->canReorder($_order)) : ?>
                             <span class="separator">|</span> <a href="<?php echo $this->getReorderUrl($_order) ?>" class="link-reorder"><?php echo $this->__('Reorder') ?></a>
                         <?php endif ?> */?>
