--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -26892,8 +26892,10 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 }
 
 @media only screen and (max-width: 480px) { 
-.nested-container .page-banners .left {    width: 100%!important;  margin-bottom: 0!important; margin-left: 0; margin-right: 0;}
-.nested-container .page-banners .right {    width: 100%!important;  margin-right: 0!important;  margin-bottom: 0!important;}
+.nested-container .page-banners .left {    width: 100%!important;  margin-bottom: 10px!important; margin-left: 0; margin-right: 0;}
+.nested-container .page-banners .right {    width: 100%!important;  margin-right: 10px!important;  margin-bottom: 0!important;}
+.nested-container .page-banners .left a {    display: block;  margin-bottom: 10px;}
+.nested-container .page-banners .right a {    display: block;  margin-bottom: 10px;}
 
 
 }
@@ -27008,7 +27010,9 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 	cursor: pointer;
 }
 
-
+.onestepcheckout_datafields .one_step1 {width: 32%;}
+.onestepcheckout_datafields .one_step1:last-child {width: 36%;}
+.one_step1 .order-products-table tfoot tr td.last strong {  width: 150px!important; display: table;}
 
 
 
