--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27014,24 +27014,28 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 
 .onestepcheckout_datafields .one_step1 {width: 32%;}
 .onestepcheckout_datafields .one_step1:last-child {width: 36%;}
-.one_step1 .order-products-table tfoot tr td.last strong {  width: 150px!important; display: table;}
-.checkout-payment-method-load {    width: 100%!important;}
-.checkout-payment-method-load .sp-methods dt input {    margin-left: 0;  margin-right: 0;}
-  .checkout-payment-method-load .sp-methods dt label {    float: left;  width: auto!important;} 
+.one_step1 .order-products-table tfoot tr td.last {padding-right: 0px;}
+.one_step1 .order-products-table tfoot tr td.last span {  width: 100px!important; display: table;}
+#checkout-payment-method-load {    width: 100%!important;}
+.onestepcheckout_block #checkout-payment-method-load { width: 100%!important;  float: left;}
+#checkout-payment-method-load .sp-methods dt input {    margin-left: 0;  margin-right: 0;}
+  #checkout-payment-method-load .sp-methods dt label {    float: left;  width: auto!important;} 
   .cart form .cart-collaterals {    overflow: visible;
-    height: 100%;
+    height: 100%; 
     background: #fff;
     width: 100%;
     float: left;
     -webkit-box-shadow: 1px 3px 1px rgba(50, 50, 50, 0.04);
     -moz-box-shadow: 1px 3px 1px rgba(50, 50, 50, 0.04);
     box-shadow: 1px 3px 1px rgba(50, 50, 50, 0.04);
-    -webkit-border-radius: 0px;
+    -webkit-border-radius: 0px; 
     padding: 20px;
     box-sizing: border-box;}
     .totals-content #shopping-cart-totals-table tfoot tr td span.price {  width: 150px!important; display: table;}
-.cart .cart-collaterals .totals-content {    border: 1px solid #e1e1e1;}
-.cart .cart-collaterals #discount-coupon-form {    border: 1px solid #e1e1e1;}
+.cart .cart-collaterals .totals-content {    border: 1px solid #e1e1e1;     -webkit-box-shadow: 0;
+    -moz-box-shadow: 0;  box-shadow: 0;  -webkit-border-radius: 0;  -moz-border-radius: 0px;}
+.cart .cart-collaterals #discount-coupon-form {    border: 1px solid #e1e1e1;     -webkit-box-shadow: 0;
+    -moz-box-shadow: 0;  box-shadow: 0;  -webkit-border-radius: 0;    -moz-border-radius: 0px;}
 .discount-form .buttons-set button.button:hover {    background: white; color: #282828;} 
 
 
