--- a/skin/frontend/codazon_fastest/default/css/styles.css
+++ b/skin/frontend/codazon_fastest/default/css/styles.css
@@ -27041,7 +27041,15 @@ border-bottom: 3px solid #121212; display: inline-block; padding-bottom: 10px;}
 #checkout-payment-method-load .sp-methods dt { margin: 0px 0 5px; width: 100%;  float: left;} 
 .cart .cart-collaterals .last {    width: 50%;  position: static;  float: right;}
 .cart .cart-collaterals .first {    width: 50%;  float: left;  position: static;}
-.cart .cart-collaterals .last .col-sm-12 {}
+.cart .cart-collaterals .last .col-sm-12 {width: 100%; float: left;}
+.cart .cart-collaterals .first .col-sm-12 {width: 100%; float: left;}
+.groupmenu-drop-content.groupmenu-1 { width: 150px;}
+.groupmenu-drop-content.groupmenu-2 { width: 300px;}
+.groupmenu-drop-content.groupmenu-3 { width: 450px;}
+.groupmenu-drop-content.groupmenu-4 { width: 600px;} 
+.groupmenu-drop-content.groupmenu-5 { width: 750px;} 
+.groupmenu-drop-content.groupmenu-6 { width: 900px;}
+.groupmenu-drop-content.groupmenu-7 { width: 1050px;}
 
 
 
